# shared

./: .gitignore  auto-push.ps1  claude_code_prompt_electrical_exam.md  create_push_shortcut.ps1  create_shortcut.ps1  first_time_setup.bat  git-autosync.ps1  my-project.code-workspace  push.ps1  register_periodic_sync.ps1  register_shutdown_task.ps1  setup_sync.bat  sync-on-startup.ps1
.claude/: settings.local.json
.github/workflows/: daily-task-notify.yml  morning-focus.yml
0190myapp/: transformer_system.txt
0190myapp/denki-kakomon/: dev.db  package.json  verify-endpoints.ps1
02_Projects/: .gitignore
02_Projects/Active/ai-manga-factory/: .env.example  pyproject.toml  scenarios.json
02_Projects/Active/ai-manga-factory/src/: comfy_client.py  queue_manager.py
02_Projects/Active/shared-lib/: llm_client.py  notifier.py  pyproject.toml  tts_engine.py
03_Notes_MD/Drafts/: 2026-02-20_ibiden-career-roadmap.md
04_Scripts_Env/Docs/: 別PC設定手順.md
99_Archive/docs/: context.md  implementation_plan.md  task.md
data/: project-seed.yaml
denki-kakomon/prisma/: schema.prisma
denki-kakomon/scripts/: generate-data.mjs
docs/: codex-task-add-azure-issues.md  context.md  current-state-user-intent-summary.md  github_auto_sync_setup.md  project_list.md  task.md  work_history.md
localcrow/bot/: client.py
my-app/: create_exe.bat  customer_project.db
projects/market_oracle/: .env.example  pyproject.toml
projects/market_oracle/src/: dashboard.py  llm_analyzer.py  storage.py
scripts/: add_azure_issues.py  update_daily_execution.py  update_daily_execution_v2.py
(+226 files in other folders)
