[project]
name = "market-oracle"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "yfinance>=0.2.31",
    "ccxt>=4.0",
    "beautifulsoup4>=4.12",
    "matplotlib>=3.8",
    "plotly>=5.18",
    "dash>=2.14",
    "pandas>=2.1",
    "aiohttp>=3.9",
    "shared-lib",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project.scripts]
market-oracle = "src.dashboard:main"
